# FinalProjectCS100UCR

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ScreenLayouts.txt  testSubclasses.cpp
Game/: CMakeLists.txt  game.cpp
attackPlayer/: archerAttack.cpp  archerAttack.h  attack.cpp  attack.h  knightAttack.cpp  knightAttack.h  mageAttack.cpp  mageAttack.h  thiefAttack.cpp  thiefAttack.h
character/: character.cpp  character.h
characterTypes/: Archer.cpp  Archer.h  Knight.cpp  Knight.h  Mage.cpp  Mage.h  Thief.cpp  Thief.h
choiceClass/: .gitignore  Choice.cpp  Choice.h  main.cpp
diceRoll/: diceRoll.cpp  diceRoll.h
inventoryClass/: CMakeLists.txt  Inventory.cpp  Inventory.h  InventoryTesting  inventoryTest.cpp
menu/: menu.cpp  menu.h
playerManager/: .gitignore  playerManagement.cpp  playerManagement.h
statManagerClass/: .gitignore  statManager.cpp  statManager.h
tests/characterTest/: .gitignore  CMakeLists.txt  characterTest.cpp
tests/choicesTest/: CMakeLists.txt  testChoiceInput.cpp
tests/inventoryTests/: .gitignore  CMakeLists.txt  testInventory.cpp
tests/playerManagementTest/: CMakeLists.txt  playerManagementTest.cpp
tests/statManagerTest/: CMakeLists.txt  test.cpp
tests/testsAttackClass/: CMakeLists.txt  testAttack.cpp
testsAttackClass/: testAttack.cpp
